--- a/index.html
+++ b/index.html
@@ -4,11 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Country Name List</title>
   </head>
   <body>
-    <h1>test</h1>
+    <div class="container">
+      <div class="heading">
+        <h1>Country list</h1>
+      </div>
+      <form class="search-form">
+        <div class="mb-4">
+          <label for="search" class="form-label"></label>
+          <input
+            type="search"
+            class="form-control"
+            id="exampleInputEmail1"
+            placeholder="Search Country name"
+          />
+        </div>
+        <div class="d-grid gap-2 col-6 mx-auto">
+          <button class="search-btn btn btn-secondary" type="button">
+            Search
+          </button>
+        </div>
+      </form>
+
+      <div class="page-data container">
+        <div class="data-row row">
+          <div class="data-col col">Flag</div>
+          <div class="col">Name</div>
+          <div class="data-col col">Region</div>
+          <div class="col">Capital</div>
+          <div class="data-col col">Population</div>
+        </div>
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
