--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,42 +13,42 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/50ba960c66.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Country Name List</title>
   </head>
   <body>
+    <!--heading-->
     <div class="container">
       <div class="heading">
-        <h1>Country list</h1>
+        <h1><i class="fa-solid fa-earth-americas"></i> Country list</h1>
       </div>
-      <form class="search-form">
-        <div class="mb-4">
-          <label for="search" class="form-label"></label>
-          <input
-            type="search"
-            class="form-control"
-            id="exampleInputEmail1"
-            placeholder="Search Country name"
-          />
-        </div>
-        <div class="d-grid gap-2 col-6 mx-auto">
-          <button class="search-btn btn btn-secondary" type="button">
-            Search
-          </button>
-        </div>
-      </form>
-
+    </div>
+    <!--Serch bar with btn-->
+   <div class="search--div row height d-flex justify-content-center align-items-center">
+     <div class="col-md-8">
+       <div class="search">
+         <i class="fa fa-search"></i>
+         <input type="text" class="form-control" placeholder="Search Country name..">
+         <button class="btn btn-primary">Search</button>
+       </div>
+     </div>
+   </div>
+      <!--Api Data body-->
       <div class="page-data container">
-        <div class="data-row row">
+        <div class="heading-row row">
           <div class="data-col col">Flag</div>
           <div class="col">Name</div>
           <div class="data-col col">Region</div>
           <div class="col">Capital</div>
           <div class="data-col col">Population</div>
+          <div class="API-data"></div>
         </div>
       </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
