--- a/index.html
+++ b/index.html
@@ -48,11 +48,19 @@
       <!--Api Data body-->
       <div class="page-data container-lg">
         <div class="heading-row row">
-          <div class="flag--col data-col col">Flag</div>
-          <div class="col">Name</div>
-          <div class="data-col col">Region</div>
-          <div class="col">Capital</div>
-          <div class="data-col col">Population</div>
+          <div class="flag--col data-col col">
+            <i class="fa-solid fa-flag"></i> Flag
+          </div>
+          <div class="col"><i class="fa-solid fa-earth-asia"></i> Name</div>
+          <div class="data-col col">
+            <i class="fa-solid fa-globe"></i> Region
+          </div>
+          <div class="col">
+            <i class="fa-solid fa-landmark-flag"></i> Capital
+          </div>
+          <div class="data-col col">
+            <i class="fa-solid fa-people-group"></i> Population
+          </div>
 
           <div class="API-data"></div>
         </div>
